# uwb-rs

./: Cargo.toml  Embed.toml  LICENSE  README.md
.cargo/: config
data-processing/: .gitignore  README.md  accel.ipynb  anchor_and_tag_placement_plot.ipynb  collect_data.py  coords.py  filtering.ipynb  helper_functions.py  helpers.py  kalman.ipynb  locator.py  mlat_many_samples.ipynb  movement.ipynb  preliminary_tests.ipynb  requirements.txt  run_30_60s.sh  tests.ipynb  uwb_simulation.ipynb
data-processing/data/: points.py
data-processing/kalman/: __init__.py
data-processing/multilateration/: geometry.py  solve.py  solver_2d.py  solver_3d.py
data-processing/test_notebooks/: accel.ipynb  additional_unused_tests.ipynb  anchor_and_tag_placement_plot.ipynb  distance_tests.ipynb  kalman.ipynb  locator.py  mlat_many_samples_2nd_kalman.ipynb  movement.ipynb  multilateration.ipynb  preliminary_tests.ipynb  test_pytrilateration.ipynb  test_remove_incomplete.ipynb  test_time_estimation.ipynb  tests.ipynb  visualize.ipynb
examples/: dw1000_only_tx.rs  lib.rs  mobile_tag.rs  test_connectivity.rs
src/: handshake.rs  lib.rs  main.rs
tests/: integration.rs
uwb-rs/: Cargo.toml  README.md
uwb-rs/.cargo/: config.toml
uwb-rs/examples/: basestation.rs
uwb-rs/src/: handshake.rs  lib.rs
uwb-rs/tests/: integration.rs
