[package]
authors = ["Piotr Socha <piotrsocha01@gmail.com>"]
name = "uwb-rs"
edition = "2021"
version = "0.1.0"
license = "MIT"

[lib]
harness = false

# needed for each integration test
[[test]]
name = "integration"
harness = false

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
defmt = "0.3"
defmt-rtt = "0.4"
dwm1001 = "0.6.0"
embedded-timeout-macros = "0.3.0"
ieee802154 = { version = "0.6.1", features = ["defmt"] }
lis2dh12 = {version = "0.6.7", features = ["out_f32"]}
micromath = "2.0.0"
nb = "1.0.0"
nrf52832-hal = "0.16.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }

[dev-dependencies]
defmt-test = "0.3"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 'z'         # <-
overflow-checks = true  # <-

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3           # <-
overflow-checks = true  # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3            # <-
overflow-checks = false  # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3            # <-
overflow-checks = false  # <-

# uncomment this to switch from the crates.io version of defmt to its git version
# check app-template's README for instructions
# [patch.crates-io]
# defmt = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version reported by `probe-run --version`" }
# defmt-rtt = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version reported by `probe-run --version`" }
# defmt-test = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version reported by `probe-run --version`" }
# panic-probe = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version reported by `probe-run --version`" }

[replace]
"dwm1001:0.6.0" = { git = 'https://github.com/jkelleyrtp/dw1000-rs'}
"dw1000:0.6.0" = { git = 'https://github.com/jkelleyrtp/dw1000-rs'}
